force-app/main/default/objects/Mail__c/Mail__c.object-meta.xml
<CustomObject>
    <label>Mail</label>
    <nameField>
        <displayFormat>MN#{0000000000}</displayFormat>
        <label>Mail I.D.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>