force-app/main/default/objects/Mail__c/fields/Deliver_To__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To__c</fullName>
    <label>Deliver To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact for Mail</relationshipLabel>
    <relationshipName>Mails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>