force-app/main/default/objects/Mail__c/fields/Inusrance__c.field-meta.xml
<CustomField>
    <fullName>Inusrance__c</fullName>
    <description>Amount covered with Insurance</description>
    <label>Inusrance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>