force-app/main/default/objects/Mail__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <referenceTo>Adress__c</referenceTo>
    <relationshipLabel>Mails</relationshipLabel>
    <relationshipName>Mails</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>