force-app/main/default/objects/Mail__c/fields/Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Status__c</fullName>
    <inlineHelpText>Sets what the refund status when a package is missing</inlineHelpText>
    <label>Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>